# credit-risk-mlops

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
models/: credit_risk_20260612T023633Z.joblib  credit_risk_20260612T023633Z.metrics.json  credit_risk_20260612T023703Z.joblib  credit_risk_20260612T023703Z.metrics.json  credit_risk_20260612T023706Z.joblib  credit_risk_20260612T023706Z.metrics.json  credit_risk_20260612T023735Z.joblib  credit_risk_20260612T023735Z.metrics.json  credit_risk_20260612T023739Z.joblib  latest.json
pipelines/: run_pipeline.py
src/credit_risk/: __init__.py  api.py  config.py  data.py  features.py  model.py  schema.py  train.py
src/credit_risk_mlops.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
static/: index.html
tests/: conftest.py  test_api.py  test_data.py  test_model.py  test_train.py
