[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "credit-risk-mlops"
version = "0.1.0"
description = "End-to-end, reproducible ML pipeline that trains, versions, and serves a credit-default risk model via FastAPI."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Vamsi Krishna Unnam", email = "vamsik8629@gmail.com" }]
keywords = ["mlops", "machine-learning", "fastapi", "scikit-learn", "credit-risk", "model-serving"]

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "joblib>=1.3",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "httpx>=0.27"]

[project.urls]
Homepage = "https://github.com/vk86294140-cloud/credit-risk-mlops"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
